# openapi.yaml
@@ -1,12 +1,12 @@
 openapi: 3.0.3
 info:
-  title: API de Charadas
-  description: API para gerenciamento de charadas com integração Firebase e autenticação via Token.
+  title: API GymSystem
+  description: API para gerenciamento de clientes com integração Firebase e autenticação via Token JWT.
   version: 1.0.0
   contact:
-    name: Barros
+    name: Barros e João Pedro
 servers:
-  - url: https://api-charadas-eosin.vercel.app/
+  - url: https://--CLIENTE NA VERCEL
     description: Servidor de Produção (Vercel)
   - url: http://127.0.0.1:5000
     description: Servidor Local
@@ -20,29 +20,38 @@ components:
       description: "Insira o token obtido na rota /login para acessar rotas protegidas."
 
   schemas:
-    Charada:
+    Cliente:
       type: object
       properties:
         id:
           type: integer
-          example: 1
-        pergunta:
+          example: 0
+        nome:
           type: string
-          example: "O que é, o que é?"
-        resposta:
+          example: "Nome do cliente"
+        cpf:
           type: string
-          example: "É o que é."
+          example: "99999999999"
+        autorizado:
+          type: boolean
+          example: true
     
-    CharadaInput:
+    ClienteInput:
       type: object
       required:
-        - pergunta
-        - resposta
+        - nome
+        - cpf
+        - autorizado
       properties:
-        pergunta:
+        nome:
           type: string
-        resposta:
+          example: "Felipe Barros"
+        cpf:
           type: string
+          example: "99999999999"
+        autorizado:
+          type: boolean
+          example: true
 
     Error:
       type: object
@@ -96,21 +105,21 @@ paths:
         '401':
           description: Credenciais inválidas
 
-  /charadas:
+  /clientes:
     get:
-      summary: Lista todas as charadas
+      summary: Lista todos os clientes
       responses:
         '200':
-          description: Lista de charadas
+          description: Lista de clientes cadastrados
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Charada'
+                  $ref: '#/components/schemas/Cliente'
     
     post:
-      summary: Adiciona uma nova charada
+      summary: Adiciona um novo cliente
       security:
         - bearerAuth: []
       requestBody:
@@ -118,29 +127,29 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/CharadaInput'
+              $ref: '#/components/schemas/ClienteInput'
       responses:
         '201':
-          description: Criada com sucesso
+          description: Cliente criado com sucesso
         '400':
           description: Dados inválidos
         '500':
-          description: Erro interno
+          description: Erro interno no servidor
 
-  /charadas/random:
+  /clientes/random:
     get:
-      summary: Retorna uma charada aleatória
+      summary: Retorna um cliente aleatório
       responses:
         '200':
-          description: Uma charada selecionada aleatoriamente
+          description: Um cliente selecionado aleatoriamente
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Charada'
+                $ref: '#/components/schemas/Cliente'
         '404':
-          description: Nenhuma charada encontrada
+          description: Nenhum cliente encontrado
 
-  /charadas/{id}:
+  /clientes/{id}:
     parameters:
       - name: id
         in: path
@@ -149,19 +158,19 @@ paths:
           type: integer
     
     get:
-      summary: Busca uma charada por ID
+      summary: Busca um cliente por ID
       responses:
         '200':
-          description: Charada encontrada
+          description: Cliente encontrado
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Charada'
+                $ref: '#/components/schemas/Cliente'
         '404':
-          description: Charada não encontrada
+          description: Cliente não encontrado
 
     put:
-      summary: Atualiza uma charada (Completo)
+      summary: Atualiza um cliente (Completo)
       security:
         - bearerAuth: []
       requestBody:
@@ -169,15 +178,15 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/CharadaInput'
+              $ref: '#/components/schemas/ClienteInput'
       responses:
         '200':
-          description: Atualizada com sucesso
+          description: Atualizado com sucesso
         '404':
-          description: Charada não encontrada
+          description: Cliente não encontrado
 
     patch:
-      summary: Atualiza parcialmente uma charada
+      summary: Atualiza parcialmente um cliente
       security:
         - bearerAuth: []
       requestBody:
@@ -186,18 +195,21 @@ paths:
             schema:
               type: object
               properties:
-                pergunta: { type: string }
-                resposta: { type: string }
+                nome: { type: string }
+                cpf: { type: string }
+                autorizado: { type: boolean }
       responses:
         '200':
-          description: Atualizada com sucesso
+          description: Atualizado com sucesso
+        '404':
+          description: Cliente não encontrado
 
     delete:
-      summary: Remove uma charada
+      summary: Remove um cliente
       security:
         - bearerAuth: []
       responses:
         '200':
-          description: Apagada com sucesso
+          description: Apagado com sucesso
         '404':
-          description: Charada não encontrada
+          description: Cliente não encontrado
